# MarketPulse

./: .clang-tidy  .editorconfig  .gitignore  BUILD.md  CMakeLists.txt  Dockerfile.benchmark  Dockerfile.core  IMPLEMENTATION_AUDIT.md  LICENSE  MVP_COMPLETION.md  README.md  README_COMPLETE.md  RUNTIME_VALIDATION_PLAN.md  RUNTIME_VALIDATION_REPORT.md  build_final.txt  config.json  docker-compose.yml  index.html  package.json  test_ws.html  vcpkg.json
benchmarks/: CMakeLists.txt  throughput_benchmark.cpp
docs/: DATA_CONTRACT.md  DATA_FLOW.md  HARDENING.md  LIFECYCLE.md  LIFECYCLE_IMPLEMENTATION.md  LIFECYCLE_QUICKREF.md  OBSERVABILITY.md  PIPELINE_IMPLEMENTATION.md  V1_COMPLETION_REPORT.md  V2_DATA_CONTRACTS.md  V2_FEATURE_CATALOG.md  V2_FEATURE_ENGINE_DESIGN.md  V2_IMPLEMENTATION.md  V2_STORAGE_DESIGN.md
infra/: GRAFANA_SETUP.md
infra/docker/: Dockerfile.benchmark  docker-compose.yml
infra/grafana/dashboards/: dashboard.yml  marketpulse-observability.json  marketpulse-overview.json
infra/prometheus/: prometheus.docker.yml  prometheus.yml
scripts/: setup-dependencies.ps1  setup_dependencies.py  test_lifecycle.py  test_pipeline.py
src/: main_core.cpp  mpie_main.cpp
src/common/: backpressure.hpp  config.cpp  config.hpp  crc32.cpp  crc32.hpp  frame.cpp  frame.hpp  metrics.cpp  metrics.hpp  symbol_registry.cpp  symbol_registry.hpp
src/ctrl/: control_server.cpp  control_server.hpp
src/feed/: mock_feed.cpp  mock_feed.hpp
src/mpie/core/: feature_descriptor.hpp  market_event.hpp
src/mpie/engine/: feature_engine.cpp  feature_engine.hpp  worker.cpp  worker.hpp
src/mpie/registry/: feature_registry.cpp  feature_registry.hpp
src/normalize/: normalizer.cpp  normalizer.hpp
src/publisher/: pub_server.cpp  pub_server.hpp
src/recorder/: recorder.cpp  recorder.hpp
src/replay/: replayer.cpp  replayer.hpp
ui/: Dockerfile  next.config.js  package.json  tailwind.config.js
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/components/: LoadingSpinner.tsx  MetricsCard.tsx  Sidebar.tsx
ui/app/feeds/: page.tsx
ui/app/hooks/: useApi.ts  useWebSocket.ts
ui/app/metrics/: page.tsx
ui/app/replay/: page.tsx
ui/app/symbols/: page.tsx
